# minos-api-gateway

./: .buildinfo  .gitignore  AUTHORS.md  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  api_gateway.db  authors.html  genindex.html  history.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  runthetests.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/workflows/: python-tests.yml
_modules/: index.html
_sources/api/: minos.api_gateway.rest.cli.rst.txt  minos.api_gateway.rest.config.rst.txt  minos.api_gateway.rest.coordinator.rst.txt  minos.api_gateway.rest.database.models.rst.txt  minos.rst.txt  (+13 more)
api/: minos.api_gateway.html  minos.api_gateway.rest.cli.html  minos.api_gateway.rest.config.html  minos.api_gateway.rest.coordinator.html  minos.api_gateway.rest.database.html  minos.api_gateway.rest.database.models.html  minos.api_gateway.rest.database.repository.html  minos.api_gateway.rest.exceptions.html  minos.api_gateway.rest.handler.html  minos.api_gateway.rest.handlers.html  minos.api_gateway.rest.html  minos.api_gateway.rest.launchers.html  minos.api_gateway.rest.service.html  minos.api_gateway.rest.urlmatch.authmatch.html  minos.api_gateway.rest.urlmatch.autzmatch.html  minos.api_gateway.rest.urlmatch.html  minos.api_gateway.rest.urlmatch.urlmatch.html  minos.html
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
postman/: API Gateway.postman_collection.json
tests/: __init__.py  config-auth-disabled.yml  config.yml  config_without_auth.yml  handlers.py  test_api_gateway.py  test_config.yml
(+51 files in other folders)
